# DeFi-Arbitrage-Engine

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  LICENSE  Makefile  README.md  config.toml  design.md  rust-toolchain.toml
Docker/: Dockerfile  docker-compose.yml  redis.conf
dashboard/: package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css
dashboard/src/components/: Layout.tsx
dashboard/src/pages/: Analytics.tsx  Config.tsx  Dashboard.tsx  ExecutionMonitor.tsx  Login.tsx  RiskManagement.tsx
dashboard/src/stores/: authStore.ts
dashboard/src/types/: index.ts
database/migrations/: 001_initial_schema.sql
engine/: Cargo.toml  README.md  build.rs  config.example.toml
engine/migrations/: 001_initial_schema.sql
engine/proto/: confirmed_block.proto  geyser.proto  transaction.proto
engine/src/: config.rs  database.rs  dex.rs  engine.rs  error.rs  geyser.rs  lib.rs  metrics.rs  models.rs  server.rs  strategy.rs  utils.rs
migrations/: 001_init_database.sql  001_initial_schema.sql
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
programs/: Anchor.toml
programs/cross-dex-router/: Cargo.toml
programs/cross-dex-router/src/: func.rs  lib.rs  models.rs
programs/flash-arbitrage/: Cargo.toml
programs/flash-arbitrage/src/: func.rs  lib.rs  models.rs
programs/mev-protection/: Cargo.toml
programs/mev-protection/src/: func.rs  lib.rs  models.rs
scripts/: backup.sh  restore.sh  setup-dev.sh
