[workspace]
members = [
    "engine",
    "programs/flash-arbitrage",
    "programs/cross-dex-router",
    "programs/mev-protection",
]
resolver = "2"

[workspace.dependencies]
# Solana and Anchor dependencies
anchor-lang = "0.31"
anchor-spl = "0.31"
solana-program = "3.0"
solana-sdk = "3.0"
solana-client = "3.0"
solana-rpc-client = "3.0"
solana-rpc-client-api = "3.0"
solana-account-decoder = "3.0"
solana-transaction-status = "3.0"
spl-token = "4.0"
spl-associated-token-account = "7.0"

# Async runtime and web framework
tokio = { version = "1.47", features = ["full"] }
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
hyper = "1.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"
borsh = { version = "1.5", features = ["derive"] }

# Database and caching
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Cryptography and hashing
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.8"
hmac = "0.12"
base64 = "0.22"
base58 = "0.2"
hex = "0.4"

# Numerical computations
num-bigint = "0.4"
num-traits = "0.2"
rust_decimal = { version = "1.38", features = ["serde-with-str"] }
statrs = "0.18"

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Configuration
config = "0.15"
toml = "0.9"

# Utilities
uuid = { version = "1.18", features = ["v4", "serde"] }
once_cell = "1.21"
lazy_static = "1.5"
futures = "0.3"
futures-util = "0.3"
pin-project = "1.1"
bytes = "1.10"

# Networking and HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
tungstenite = "0.27"
tokio-tungstenite = "0.27"
url = "2.5"

# Metrics and monitoring
prometheus = "0.14"
sysinfo = "0.37"

# Testing
tokio-test = "0.4"
mockall = "0.13"

# DEX SDK dependencies (Jupiter, Raydium, etc.)
# Note: These would be actual crates in a real implementation
# jupiter-sdk = "0.1.0"
# raydium-sdk = "0.1.0"
# orca-sdk = "0.1.0"
# meteora-sdk = "0.1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
debug = true