[package]
name = "arbitrage-engine"
version = "0.1.0"
edition = "2021"
authors = ["DeFi Arbitrage Team"]
description = "High-performance Solana DeFi arbitrage engine"
license = "MIT"
repository = "https://github.com/your-org/defi-arbitrage-engine"
keywords = ["solana", "defi", "arbitrage", "trading", "blockchain"]
categories = ["finance", "cryptocurrency", "trading"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Web framework and HTTP
axum = { version = "0.7", features = ["ws", "headers", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
hyper = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.21"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "bigdecimal"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "streams"] }

# Solana
solana-client = "1.17"
solana-sdk = "1.17"
solana-program = "1.17"
solana-account-decoder = "1.17"
anchor-client = "0.29"
anchor-lang = "0.29"
spl-token = "4.0"
spl-associated-token-account = "2.2"

# Geyser gRPC
tonic = "0.10"
prost = "0.12"
tonic-build = "0.10"

# Cryptography
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
bs58 = "0.5"

# Numeric types
bigdecimal = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde-float"] }
num-traits = "0.2"
num-bigint = "0.4"

# Time and dates
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.9"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
log = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"
lazy_static = "1.4"
dashmap = "5.5"
parking_lot = "0.12"
byteorder = "1.5"
bytes = "1.5"
base64 = "0.21"
hex = "0.4"

# Metrics and monitoring
prometheus = "0.13"
sysinfo = "0.30"

# Rate limiting
governor = "0.6"

# Jupiter SDK (for Jupiter DEX integration)
jupiter-swap-api-client = { git = "https://github.com/jup-ag/jupiter-swap-api-client", optional = true }

# Development dependencies
[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
serial_test = "3.0"
test-log = "0.2"
env_logger = "0.10"
tempfile = "3.8"

# Features
[features]
default = ["jupiter"]
jupiter = ["jupiter-swap-api-client"]

# Build script for gRPC code generation
[build-dependencies]
tonic-build = "0.10"

# Optimization profiles
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
strip = false

# Workspace configuration
[workspace]
members = [".", "../programs/*"]
resolver = "2"

# Metadata for cargo-audit
[package.metadata.audit]
db-path = "~/.cargo/advisory-db"
db-urls = ["https://github.com/RustSec/advisory-db"]

# Documentation
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]