[package]
name = "cross-dex-router"
version = "0.1.0"
description = "Cross-DEX router program for multi-hop arbitrage optimization"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cross_dex_router"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
solana-program = "1.17.0"
bytemuck = "1.14.0"
borsh = "0.10.3"
thiserror = "1.0.50"
num-traits = "0.2.17"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
tokio = { version = "1.0", features = ["macros"] }