[package]
name = "flash-arbitrage"
version = "0.1.0"
description = "Flash arbitrage program for atomic cross-DEX arbitrage execution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flash_arbitrage"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
solana-program = "1.17.0"
bytemuck = "1.14.0"
borsh = "0.10.3"
thiserror = "1.0.50"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
tokio = { version = "1.0", features = ["macros"] }