[package]
name = "flash-arbitrage"
version = "0.1.0"
description = "Flash arbitrage program for atomic cross-DEX arbitrage execution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flash_arbitrage"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
solana-program = { workspace = true }
bytemuck = "1.14.0"
borsh = "0.10.3"
thiserror = "1.0.50"

[dev-dependencies]
solana-sdk = { workspace = true }
tokio = { version = "1.0", features = ["macros"] }