[package]
name = "mev-protection"
version = "0.1.0"
description = "MEV protection program for sandwich attack prevention and transaction ordering"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mev_protection"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
solana-program = { workspace = true }
bytemuck = "1.14.0"
borsh = "0.10.3"
thiserror = "1.0.50"
sha2 = "0.10.8"

[dev-dependencies]
solana-sdk = { workspace = true }
tokio = { version = "1.0", features = ["macros"] }